enviar mensaje con tecla intro y borrar el mensaje en el TextField

--- a/notas/todo
+++ b/notas/todo
@@ -1,5 +1,3 @@
-funcionalidad enviar mensaje
-enviar mensaje con intro
 cambiar nuevo chat por usuarios online en el nombre del botón
 añadir botón cancelar y actualizar en usuarios online
-comprobar función listar usuarios online
+funcionalidad grupos (desde la pestaña grupos)
